# learn-agentic-ai

./: README.md
00_swarm/: readme.md
01_uv/: readme.md
01_uv/practice-project-1/: main.py  pyproject.toml
01_uv/practice-project-1/src/practice-project-1/: __init__.py
01_uv/practice-project-2/: pyproject.toml
01_uv/practice-project-2/src/practice-project-2/: __init__.py
02_openrouter/: readme.md
03_litellm_openai_agent/: readme.md
03_litellm_openai_agent/01_litellm/: readme.md
03_litellm_openai_agent/01_litellm/myproject/: README.md  pyproject.toml
03_litellm_openai_agent/01_litellm/myproject/src/myproject/: hello.py
03_litellm_openai_agent/02_uv_litellm_chainlite/: readme.md
03_litellm_openai_agent/02_uv_litellm_chainlite/chatbot/: README.md  chat_history.json  main.py  pyproject.toml
04_hello_agent/: readme.md
04_hello_agent/async/hello_agent/: README.md  main.py
04_hello_agent/sync/hello-agent/: README.md  main.py  pyproject.toml
